syntax = "proto3";

package erda.apps.aiproxy;
option go_package = "github.com/erda-project/erda-proto-go/apps/aiproxy/pb";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "common/http.proto";

service AIProvider {
  rpc CreateProvider(Provider) returns (common.VoidResponse) {
    option(google.api.http) = {
      post: "/api/ai-proxy/providers"
    };
  }

  rpc DeleteProvider(Provider) returns (common.VoidResponse) {
    option(google.api.http) = {
      delete: "/api/ai-proxy/providers/{name}/instances/{instanceId}"
    };
  }

  rpc UpdateProvider(Provider) returns (Provider) {
    option(google.api.http) = {
      put: "/api/ai-proxy/providers/{name}/instances/{instanceId}"
    };
  }

  rpc ListProviders(Provider) returns (ListProvidersRespData) {
    option(google.api.http) = {
      get: "/api/ai-proxy/providers"
    };
  }

  rpc GetProvider(Provider) returns (Provider) {
    option(google.api.http) = {
      get: "/api/ai-proxy/providers/{name}/instances/{instanceId}"
    };
  }
}

message Provider {
  string name = 1;
  string instanceId = 2;
  string host = 3;
  string scheme = 4;
  string description = 5;
  string docSite = 6;
  string apiKey = 7;
  string metadata = 8;
}

message ListProvidersRespData {
  uint32 total = 1;
  repeated Provider list = 2;
}